added all pages

--- a/#src/footer.html
+++ b/#src/footer.html
@@ -1,8 +1,44 @@
-<footer class="footer">
-	<div class="footer__container container">
+<div class="container--big">
+	<footer class="footer">
+		<div class="footer__container container">
+			<div class="footer__nav nav-footer">
+				<div class="nav-footer__item">
+					<a href="#" class="nav-footer__link">История промысла</a>
+				</div>
+				<div class="nav-footer__item">
+					<a href="#" class="nav-footer__link">Вопрос - ответ</a>
+				</div>
+				<div class="nav-footer__item">
+					<a href="#" class="nav-footer__link">Доставка и оплата</a>
+				</div>
+				<div class="nav-footer__item">
+					<a href="#" class="nav-footer__link">Контакты</a>
+				</div>
+			</div>
+			<div class="contacts-footer">
+				<ul class="contacts-footer__tels">
+					<li>
+						<a href="#">8-8172-72-20-04
+						</a>
+					</li>
+					<li>
+						<a href="#">8-981-432-20-10</a>
+					</li>
+				</ul>
+				<div class="contacts-footer__adress">
+					Вологда,<br>ул. Козленская, д. 43-а, корп. 2
+				</div>
+			</div>
+			<div class="text-footer">
+				<div class="text-footer__item">Все права защищены, копирование любых материалов запрещено.</div>
+				<div class="text-footer__item">Политика конфиденциальности</div>
+				<div class="text-footer__item">Разработка сайта - <a href="#" target="_blank" class="dev">Удобный интернет</a> ©
+					2020</div>
+			</div>
+		</div>
+	</footer>
+</div>
 
-	</div>
-</footer>
 
 </div>
 
@@ -10,7 +46,7 @@
 <script src="js/ofi.min.js"></script>
 <script src="js/jquery.inputmask.min.js"></script>
 <script src="js/swiper.min.js"></script>
-<!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script> -->
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 <script src="js/jquery.fancybox.min.js"></script>
 <script src="js/alertify.min.js"></script>
 <script src="js/main.js"></script>
