--- a/#src/index.html
+++ b/#src/index.html
@@ -140,12 +140,12 @@
 								</div>
 							</div>
 							<div class="slide-hero__right right-slide-hero">
-								<div class="right-slide-hero__img">
-									<img src="img/hero-slide-1-right.jpg" alt="">
+								<div class="right-slide-hero__img" style="background-image: url(img/hero-slide-1-right.jpg);">
+									<img src="img/hero-slider-help.jpg" alt="" class="help-img">
+									<a href="#" class="right-slide-hero__btn btn">
+										Смотреть коллекцию
+									</a>
 								</div>
-								<a href="#" class="right-slide-hero__btn btn">
-									Смотреть коллекцию
-								</a>
 							</div>
 						</div>
 					</div>
@@ -205,6 +205,28 @@
 				</div>
 			</div>
 		</section>
+
+		<div class="third container">
+			<div class="third__flex">
+				<div class="third__left">
+					<div class="third__title title-2">Вологодская финифть -</div>
+					<div class="third__content type-style ">
+						<p>это целый мир искусства, где произведениями являются изделия из финифти, а творцами - молодые,
+							талантливые дизайнеры-ювелиры.</p>
+						<p>Художественное эмалирование - чрезвычайно сложный и капризный процесс. Конечный результат зависит от
+							качества материалов, соблюдения всех тонкостей подготовки этих материалов, опыта мастера и просто от
+							случая.</p>
+						<p>У нас нет украшений без души и имени. За каждым изделием стоит история, мечта, и, обязательно, частичка
+							любви автора.</p>
+						<p>У нас можно купить Вологодские украшения из финифти на любой вкус.</p>
+					</div>
+				</div>
+				<div class="third__right">
+					<a href="#" class="third__btn btn">Перейти в каталог</a>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </div>
 
