--- a/#src/modal.html
+++ b/#src/modal.html
@@ -1,19 +1,24 @@
-<div id="modal-call" class="modal-call">
-	<div class="modal-call__close close-modal" data-fancybox-close></div>
-	<div class="modal-call__container">
-		<div class="modal-call__content">
-			<div class="modal-call__title">Заказать звонок</div>
-			<form class="wpcf7-form">
-				<span class="wpcf7-form-control-wrap">
-					<input type="text" placeholder="Ваше имя">
-				</span>
-				<span class="wpcf7-form-control-wrap">
-					<input type="tel" placeholder="Номер телефона">
-				</span>
-				<button type="submit" class="modal-call__btn btn">Отправить</button>
+<div id="modal-buy" class="modal-buy">
+	<div class="modal-buy__close close-modal" data-fancybox-close></div>
+	<div class="modal-buy__container">
+		<div class="modal-buy__content">
+			<div class="modal-buy__title">Сделать заказ</div>
+			<form class="form-modal-buy">
+				<div class="form-modal-buy__item">
+					<p>Ваше имя</p>
+					<input type="text">
+				</div>
+				<div class="form-modal-buy__item">
+					<p>Номер телефона</p>
+					<input type="text">
+				</div>
+				<div class="form-modal-buy__item">
+					<p>Комментарии к заказу</p>
+					<textarea></textarea>
+				</div>
+				<button type="submit" class="form-modal-buy__btn btn">Отправить</button>
 			</form>
-			<div class="modal-call__privacy">Нажимая на кнопку «Отправить» вы соглашаетесь с <a class="to-privacy">правилами
-					обработки персональных данных</a></div>
+			<div class="modal-buy__privacy">Я даю согласие на обработку <a class="to-privacy">персональных данных</a></div>
 		</div>
 	</div>
 </div>
