--- a/#src/index.html
+++ b/#src/index.html
@@ -126,12 +126,27 @@
 			</div>
 			<div class="hero__control control-hero">
 				<div class="control-hero__text">Комплект с финифтью «Садовый сезон»</div>
-				<div class="control-hero__pagination">
-
-				</div>
+				<div class="control-hero__pagination"></div>
 			</div>
 			<div class="hero__slider">
 				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="hero__slide slide-hero">
+							<div class="slide-hero__left left-slide-hero">
+								<div class="left-slide-hero__img">
+									<img src="img/hero-slide-1-left.png" alt="">
+								</div>
+							</div>
+							<div class="slide-hero__right right-slide-hero">
+								<div class="right-slide-hero__img" style="background-image: url(img/hero-slide-1-right.jpg);">
+									<img src="img/hero-slider-help.jpg" alt="" class="help-img">
+									<a href="#" class="right-slide-hero__btn btn">
+										Смотреть коллекцию
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="swiper-slide">
 						<div class="hero__slide slide-hero">
 							<div class="slide-hero__left left-slide-hero">
