--- a/#src/header.html
+++ b/#src/header.html
@@ -38,4 +38,4 @@
 
 		@@include('modal-polit.html')
 		@@include('modal.html')
-		<!-- @@include('mobile-menu.html') -->
+		@@include('mobile-menu.html')
