--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,21 @@
 @@include('header.html')
 
+<div class="mob-header">
+	<div class="mob-header__container container">
+		<a href="#" class="header__logo logo">
+			<div class="logo__img">
+				<img src="img/logo.svg" alt="">
+			</div>
+			<div class="logo__text">
+				<div class="logo__title">Вологодская финифть
+				</div>
+				<div class="logo__subtitle">Авторские изделия ручной работы</div>
+			</div>
+		</a>
+		<button class="mob-header__btn">МЕНЮ</button>
+	</div>
+</div>
+
 <div class="main">
 	<div class="container--big">
 		<header class="header">
@@ -18,33 +34,33 @@
 					<ul class="nav-header__top nav-header-top">
 						<li class="nav-header-top__item">
 							<a href="" class="nav-header-top__link">Корпоративные изделия</a>
-							<div class="nav-header-top__dropdown submenu">
-								<div class="submenu__container">
-									<h2 class="submenu__title">ювелирные украшения</h2>
-									<ul class="submenu__list">
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Комплекты</a>
+							<div class="nav-header-top__dropdown submenu-main">
+								<div class="submenu-main__container">
+									<h2 class="submenu-main__title">ювелирные украшения</h2>
+									<ul class="submenu-main__list">
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Комплекты</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Серьги</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Серьги</a>
 										</li>
-										<li class="submenu__item submenu__item--active">
-											<a href="#" class="submenu__link">Колье</a>
+										<li class="submenu-main__item submenu-main__item--active">
+											<a href="#" class="submenu-main__link">Колье</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Кольца</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Кольца</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Броши</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Броши</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Браслеты</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Браслеты</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Цепи</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Цепи</a>
 										</li>
 									</ul>
-									<ul class="submenu__bot">
+									<ul class="submenu-main__bot">
 										<li>
 											<a href="#">иконы</a>
 										</li>
@@ -57,33 +73,33 @@
 						</li>
 						<li class="nav-header-top__item nav-header-top__item--active">
 							<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
-							<div class="nav-header-top__dropdown submenu">
-								<div class="submenu__container">
-									<h2 class="submenu__title">ювелирные украшения</h2>
-									<ul class="submenu__list">
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Комплекты</a>
+							<div class="nav-header-top__dropdown submenu-main">
+								<div class="submenu-main__container">
+									<h2 class="submenu-main__title">ювелирные украшения</h2>
+									<ul class="submenu-main__list">
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Комплекты</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Серьги</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Серьги</a>
 										</li>
-										<li class="submenu__item submenu__item--active">
-											<a href="#" class="submenu__link">Колье</a>
+										<li class="submenu-main__item submenu-main__item--active">
+											<a href="#" class="submenu-main__link">Колье</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Кольца</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Кольца</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Броши</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Броши</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Браслеты</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Браслеты</a>
 										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Цепи</a>
+										<li class="submenu-main__item">
+											<a href="#" class="submenu-main__link">Цепи</a>
 										</li>
 									</ul>
-									<ul class="submenu__bot">
+									<ul class="submenu-main__bot">
 										<li>
 											<a href="#">иконы</a>
 										</li>
@@ -118,7 +134,6 @@
 				</div>
 			</div>
 		</header>
-
 		<section class="hero__container container">
 			<div class="hero__top top-hero">
 				<h1 class="top-hero__title">авторские ювелирные изделия</h1>
@@ -164,8 +179,61 @@
 							</div>
 						</div>
 					</div>
+					<div class="swiper-slide">
+						<div class="hero__slide slide-hero">
+							<div class="slide-hero__left left-slide-hero">
+								<div class="left-slide-hero__img">
+									<img src="img/hero-slide-1-left.png" alt="">
+								</div>
+							</div>
+							<div class="slide-hero__right right-slide-hero">
+								<div class="right-slide-hero__img" style="background-image: url(img/hero-slide-1-right.jpg);">
+									<img src="img/hero-slider-help.jpg" alt="" class="help-img">
+									<a href="#" class="right-slide-hero__btn btn">
+										Смотреть коллекцию
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="hero__slide slide-hero">
+							<div class="slide-hero__left left-slide-hero">
+								<div class="left-slide-hero__img">
+									<img src="img/hero-slide-1-left.png" alt="">
+								</div>
+							</div>
+							<div class="slide-hero__right right-slide-hero">
+								<div class="right-slide-hero__img" style="background-image: url(img/hero-slide-1-right.jpg);">
+									<img src="img/hero-slider-help.jpg" alt="" class="help-img">
+									<a href="#" class="right-slide-hero__btn btn">
+										Смотреть коллекцию
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="hero__slide slide-hero">
+							<div class="slide-hero__left left-slide-hero">
+								<div class="left-slide-hero__img">
+									<img src="img/hero-slide-1-left.png" alt="">
+								</div>
+							</div>
+							<div class="slide-hero__right right-slide-hero">
+								<div class="right-slide-hero__img" style="background-image: url(img/hero-slide-1-right.jpg);">
+									<img src="img/hero-slider-help.jpg" alt="" class="help-img">
+									<a href="#" class="right-slide-hero__btn btn">
+										Смотреть коллекцию
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+			<div class="hero__btn-p"></div>
+			<div class="hero__btn-n"></div>
 		</section>
 
 		<section class="second container">
@@ -189,14 +257,17 @@
 						</div>
 						<div class="left-second__column">
 							<div class="left-table__title">Сроки работ</div>
-							<div class="left-table__subtitle"> от 14 до 30 дней,срочное изготовление - 7 дней</div>
+							<div class="left-table__subtitle"> от 14 до 30 дней, срочное изготовление - 7 дней</div>
 						</div>
 					</div>
 				</div>
 				<div class="second__right right-second">
 					<div class="right-second__title title-2">Изготовление на заказ</div>
-					<div class="right-second__subtitle">Вы можете заказать изделие по собственному эскизу в единственном
-						экземпляре, учитываются все ваши пожелания.</div>
+					<div class="right-second__subtitle type-style">
+						<p>Вы можете заказать изделие по собственному эскизу в единственном
+							экземпляре, учитываются все ваши пожелания.
+						</p>
+					</div>
 					<div class="right-second__flex">
 						<div class="right-second__left left-second-sign">
 							<div class="left-second-sign__title">Наши изделия из финифти эксклюзивны, и повторить их не сможет даже
