--- a/#src/breadcrumbs.html
+++ b/#src/breadcrumbs.html
@@ -1,25 +1,7 @@
 <div class="breadcrumbs">
-	<div class="breadcrumbs__container container">
-		<!-- Breadcrumb NavXT 6.6.0 -->
-		<span property="itemListElement" typeof="ListItem">
-			<a href="#" class="home">
-				<span property="name">Вологодские лоси</span>
-			</a>
+	<div class="breadcrumbs__container">
+		<span class="breadcrumbs__item">
+			<a href="#" class="home">На главную</a>
 		</span>
-
-		<span class="breadcrumbs__break"></span>
-
-		<span property="itemListElement" typeof="ListItem">
-			<a href="#" class="post post-trail-archive">
-				<span property="name">Trail</span>
-			</a>
-		</span>
-
-		<span class="breadcrumbs__break"></span>
-
-		<span property="itemListElement" typeof="ListItem">
-			<span class="post post-trail current-item">Не пропусти важную информацию</span>
-		</span>
-
 	</div>
 </div>
