--- a/#src/delivery.html
+++ b/#src/delivery.html
@@ -1,5 +1,21 @@
 @@include('header.html')
 
+<div class="mob-header">
+	<div class="mob-header__container container">
+		<a href="#" class="header__logo logo">
+			<div class="logo__img">
+				<img src="img/logo.svg" alt="">
+			</div>
+			<div class="logo__text">
+				<div class="logo__title">Вологодская финифть
+				</div>
+				<div class="logo__subtitle">Авторские изделия ручной работы</div>
+			</div>
+		</a>
+		<button class="mob-header__btn">МЕНЮ</button>
+	</div>
+</div>
+
 <div class="main">
 	<div class="container--big">
 		<header class="header">
@@ -120,6 +136,7 @@
 		</header>
 
 		<section class="delivery__container container">
+			@@include('breadcrumbs.html')
 			<h1 class="delivery__title title">Доставка и оплата</h1>
 			<div class="delivery__subtitle">Обращаем ваше внимание на то, что стоимость доставки зависит от расстояния
 				транспортировки. Стоимость рассчитывается индивидуально.</div>
@@ -131,18 +148,24 @@
 					</div>
 					<div class="item-delivery__bot">
 						<div class="item-delivery__text">
-							<h3>Самовывоз</h3>
-							<p>Вы можете забрать свой заказ из нашего магазина</p>
-							<p>по адресу г. Вологда, ул. Козленская, д. 43-а, корп. 2</p>
-							<p>Время самовывоза необходимо согласовать с менеджером магазина.</p>
-							<h3>Доставка в регионы России и страны СНГ</h3>
-							<ul>
-								<li>Вы можете выбрать доставку одной из транспортных компаний: «СДЭК», «Почта России» и «DPD».</li>
-								<li>Доставка возможна по предоплате, или наложенным платежом - при получении в пункте выдачи.</li>
-								<li>Стоимость доставки рассчитывается по тарифам выбранной Вами транспортной компании.</li>
-								<li>Перед оплатой посылки с наложенным платежом есть возможность открыть посылку, чтобы убедиться в
-									правильности вашего заказа и в его сохранности после транспортировки.</li>
-							</ul>
+							<div class="group">
+								<h3>Самовывоз</h3>
+								<p>Вы можете забрать свой заказ из нашего магазина</p>
+								<p>по адресу г. Вологда, ул. Козленская, д. 43-а, корп. 2</p>
+								<p>Время самовывоза необходимо согласовать с менеджером магазина.</p>
+							</div>
+
+							<div class="group">
+								<h3>Доставка в регионы России и страны СНГ</h3>
+								<ul>
+									<li>Вы можете выбрать доставку одной из транспортных компаний: «СДЭК», «Почта России» и «DPD».</li>
+									<li>Доставка возможна по предоплате, или наложенным платежом - при получении в пункте выдачи.</li>
+									<li>Стоимость доставки рассчитывается по тарифам выбранной Вами транспортной компании.</li>
+									<li>Перед оплатой посылки с наложенным платежом есть возможность открыть посылку, чтобы убедиться в
+										правильности вашего заказа и в его сохранности после транспортировки.</li>
+								</ul>
+							</div>
+
 						</div>
 					</div>
 				</div>
@@ -257,10 +280,11 @@
 					</div>
 				</div>
 			</div>
+		</section>
 	</div>
-	</section>
+
 
 </div>
-</div>
+
 
 @@include('footer.html')
