--- a/#src/product.html
+++ b/#src/product.html
@@ -1,5 +1,21 @@
 @@include('header.html')
 
+<div class="mob-header">
+	<div class="mob-header__container container">
+		<a href="#" class="header__logo logo">
+			<div class="logo__img">
+				<img src="img/logo.svg" alt="">
+			</div>
+			<div class="logo__text">
+				<div class="logo__title">Вологодская финифть
+				</div>
+				<div class="logo__subtitle">Авторские изделия ручной работы</div>
+			</div>
+		</a>
+		<button class="mob-header__btn">МЕНЮ</button>
+	</div>
+</div>
+
 <div class="main">
 	<div class="container--big">
 		<header class="header">
@@ -123,39 +139,87 @@
 			<div class="product__flex">
 				<div class="product__left">
 					<div class="product-gal">
-						<a href="#" class="product-gal__item">
-							<img src="img/product-1.jpg" alt="">
-						</a>
-						<a href="#" class="product-gal__item">
-							<img src="img/product-2.jpg" alt="">
-						</a>
-						<a href="#" class="product-gal__item">
-							<img src="img/product-3.jpg" alt="">
-						</a>
-						<a href="#" class="product-gal__item">
-							<img src="img/product-4.jpg" alt="">
-						</a>
-						<a href="#" class="product-gal__item">
-							<img src="img/product-1.jpg" alt="">
-						</a>
-						<a href="#" class="product-gal__item">
-							<img src="img/product-2.jpg" alt="">
-						</a>
+						<div class="swiper-wrapper product__wrapper">
+							<div class="swiper-slide">
+								<a href="#" class="product-gal__item" style="background-image: url(img/product-1.jpg);">
+									<img src="img/help-product-slider.jpg" class="help-img" alt="">
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-gal__item" style="background-image: url(img/product-2.jpg);">
+									<img src="img/help-product-slider.jpg" class="help-img" alt="">
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-gal__item" style="background-image: url(img/product-3.jpg);">
+									<img src="img/help-product-slider.jpg" class="help-img" alt="">
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-gal__item" style="background-image: url(img/product-4.jpg);">
+									<img src="img/help-product-slider.jpg" class="help-img" alt="">
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-gal__item" style="background-image: url(img/product-1.jpg);">
+									<img src="img/help-product-slider.jpg" class="help-img" alt="">
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="product__right">
+					@@include('breadcrumbs.html')
 					<div class="product-info">
 						<h1 class="product-info__title title">Комплект «Ромашка»</h1>
+						<div class="product-info__price product-info__price--2">
+							<div class="product-info__old">7950₽</div>
+							<div class="product-info__new">6500 ₽</div>
+						</div>
+						<div class="product-gal product-gal--2">
+							<div class="swiper-wrapper product__wrapper">
+								<div class="swiper-slide">
+									<a href="#" class="product-gal__item" style="background-image: url(img/product-1.jpg);">
+										<img src="img/help-product-slider.jpg" class="help-img" alt="">
+									</a>
+								</div>
+								<div class="swiper-slide">
+									<a href="#" class="product-gal__item" style="background-image: url(img/product-2.jpg);">
+										<img src="img/help-product-slider.jpg" class="help-img" alt="">
+									</a>
+								</div>
+								<div class="swiper-slide">
+									<a href="#" class="product-gal__item" style="background-image: url(img/product-3.jpg);">
+										<img src="img/help-product-slider.jpg" class="help-img" alt="">
+									</a>
+								</div>
+								<div class="swiper-slide">
+									<a href="#" class="product-gal__item" style="background-image: url(img/product-4.jpg);">
+										<img src="img/help-product-slider.jpg" class="help-img" alt="">
+									</a>
+								</div>
+								<div class="swiper-slide">
+									<a href="#" class="product-gal__item" style="background-image: url(img/product-1.jpg);">
+										<img src="img/help-product-slider.jpg" class="help-img" alt="">
+									</a>
+								</div>
+							</div>
+							<div class="product-gal__pagination"></div>
+						</div>
 						<div class="product-info__subtitle">В комплект входят серьги, колье</div>
 						<div class="product-info__content">
-							<p>Серьги</p>
-							<p>Вес - 2г</p>
-							<p>Материал: серебро 925, финифть</p>
-							<p></p>
-							<p></p>
-							<p></p>
+							<div class="product-info__item item-info">
+								<div class="item-info__title">Серьги</div>
+								<div class="item-info__weight">Вес - 2г</div>
+								<div class="item-info__material">Материал: серебро 925, финифть</div>
+							</div>
+							<div class="product-info__item item-info">
+								<div class="item-info__title">Колье</div>
+								<div class="item-info__weight">Вес - 2г</div>
+								<div class="item-info__material">Материал: серебро 925, финифть</div>
+							</div>
 						</div>
-						<div class="product-info__price">
+						<div class="product-info__price product-info__price--1">
 							<div class="product-info__old">7950₽</div>
 							<div class="product-info__new">6500 ₽</div>
 						</div>
@@ -174,7 +238,10 @@
 							<div class="product-slide__descr">
 								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
 								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<span class="product-slide__price">6500 ₽</span>
+								<div class="product-slide__price">
+									<span class="product-slide__old">7500 ₽</span>
+									<span class="product-slide__new">6500 ₽</span>
+								</div>
 							</div>
 							<div class="product-slide__image">
 								<img src="img/product-slide-1jpg.jpg" alt="">
@@ -193,10 +260,13 @@
 							<div class="product-slide__descr">
 								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
 								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<span class="product-slide__price">6500 ₽</span>
+								<div class="product-slide__price">
+									<span class="product-slide__old">7500 ₽</span>
+									<span class="product-slide__new">6500 ₽</span>
+								</div>
 							</div>
 							<div class="product-slide__image">
-								<img src="img/product-slide-2.jpg" alt="">
+								<img src="img/product-slide-1jpg.jpg" alt="">
 								<span>подробнее</span>
 							</div>
 							<div class="product-slide__decor">
@@ -212,10 +282,13 @@
 							<div class="product-slide__descr">
 								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
 								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<span class="product-slide__price">6500 ₽</span>
+								<div class="product-slide__price">
+									<span class="product-slide__old">7500 ₽</span>
+									<span class="product-slide__new">6500 ₽</span>
+								</div>
 							</div>
 							<div class="product-slide__image">
-								<img src="img/product-slide-3.jpg" alt="">
+								<img src="img/product-slide-1jpg.jpg" alt="">
 								<span>подробнее</span>
 							</div>
 							<div class="product-slide__decor">
@@ -231,10 +304,13 @@
 							<div class="product-slide__descr">
 								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
 								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<span class="product-slide__price">6500 ₽</span>
+								<div class="product-slide__price">
+									<span class="product-slide__old">7500 ₽</span>
+									<span class="product-slide__new">6500 ₽</span>
+								</div>
 							</div>
 							<div class="product-slide__image">
-								<img src="img/product-slide-4.jpg" alt="">
+								<img src="img/product-slide-1jpg.jpg" alt="">
 								<span>подробнее</span>
 							</div>
 							<div class="product-slide__decor">
@@ -246,6 +322,7 @@
 						</a>
 					</div>
 				</div>
+				<div class="similar__pagination"></div>
 			</div>
 		</section>
 	</div>
