adaptive pochti all

--- a/#src/index.html
+++ b/#src/index.html
@@ -16,6 +16,82 @@
 	</div>
 </div>
 
+<div class="vsplivashki">
+	<div class="nav-header-top__dropdown submenu-main">
+		<div class="submenu-main__container">
+			<h2 class="submenu-main__title">ювелирные украшения</h2>
+			<ul class="submenu-main__list">
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Комплекты</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Серьги</a>
+				</li>
+				<li class="submenu-main__item submenu-main__item--active">
+					<a href="#" class="submenu-main__link">Колье</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Кольца</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Броши</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Браслеты</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Цепи</a>
+				</li>
+			</ul>
+			<ul class="submenu-main__bot">
+				<li>
+					<a href="#">иконы</a>
+				</li>
+				<li>
+					<a href="#">Другие изделия</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="nav-header-top__dropdown submenu-main">
+		<div class="submenu-main__container">
+			<h2 class="submenu-main__title">ювелирные украшения</h2>
+			<ul class="submenu-main__list">
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Комплекты</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Серьги</a>
+				</li>
+				<li class="submenu-main__item submenu-main__item--active">
+					<a href="#" class="submenu-main__link">Колье</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Кольца</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Броши</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Браслеты</a>
+				</li>
+				<li class="submenu-main__item">
+					<a href="#" class="submenu-main__link">Цепи</a>
+				</li>
+			</ul>
+			<ul class="submenu-main__bot">
+				<li>
+					<a href="#">иконы</a>
+				</li>
+				<li>
+					<a href="#">Другие изделия</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+
 <div class="main">
 	<div class="container--big">
 		<header class="header">
@@ -34,81 +110,9 @@
 					<ul class="nav-header__top nav-header-top">
 						<li class="nav-header-top__item">
 							<a href="" class="nav-header-top__link">Корпоративные изделия</a>
-							<div class="nav-header-top__dropdown submenu-main">
-								<div class="submenu-main__container">
-									<h2 class="submenu-main__title">ювелирные украшения</h2>
-									<ul class="submenu-main__list">
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Комплекты</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Серьги</a>
-										</li>
-										<li class="submenu-main__item submenu-main__item--active">
-											<a href="#" class="submenu-main__link">Колье</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Кольца</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Броши</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Браслеты</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Цепи</a>
-										</li>
-									</ul>
-									<ul class="submenu-main__bot">
-										<li>
-											<a href="#">иконы</a>
-										</li>
-										<li>
-											<a href="#">Другие изделия</a>
-										</li>
-									</ul>
-								</div>
-							</div>
 						</li>
 						<li class="nav-header-top__item nav-header-top__item--active">
 							<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
-							<div class="nav-header-top__dropdown submenu-main">
-								<div class="submenu-main__container">
-									<h2 class="submenu-main__title">ювелирные украшения</h2>
-									<ul class="submenu-main__list">
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Комплекты</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Серьги</a>
-										</li>
-										<li class="submenu-main__item submenu-main__item--active">
-											<a href="#" class="submenu-main__link">Колье</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Кольца</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Броши</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Браслеты</a>
-										</li>
-										<li class="submenu-main__item">
-											<a href="#" class="submenu-main__link">Цепи</a>
-										</li>
-									</ul>
-									<ul class="submenu-main__bot">
-										<li>
-											<a href="#">иконы</a>
-										</li>
-										<li>
-											<a href="#">Другие изделия</a>
-										</li>
-									</ul>
-								</div>
-							</div>
 						</li>
 					</ul>
 					<ul class="nav-header__bot nav-header-bot">
@@ -134,6 +138,7 @@
 				</div>
 			</div>
 		</header>
+
 		<section class="hero__container container">
 			<div class="hero__top top-hero">
 				<h1 class="top-hero__title">авторские ювелирные изделия</h1>
