--- a/#src/mobile-menu.html
+++ b/#src/mobile-menu.html
@@ -10,7 +10,7 @@
             <a href="#" class="top-nav__link">Корпоративные изделия</a>
             <div class="top-nav__dropdown submenu">
               <div class="submenu__header">
-                <a href="#" class="submenu__back">Каталог</a>
+                <a href="#" class="submenu__back">Корпоративные изделия</a>
                 <button class="mob-menu__close"></button>
               </div>
               <div class="submenu__list">
@@ -28,7 +28,7 @@
             <a href="#" class="top-nav__link">Индивидуальные изделия</a>
             <div class="top-nav__dropdown submenu">
               <div class="submenu__header">
-                <a href="#" class="submenu__back">Новинки</a>
+                <a href="#" class="submenu__back">Индивидуальные изделия</a>
                 <button class="mob-menu__close"></button>
               </div>
               <div class="submenu__list">
