added hero slider name

--- a/#src/contacts.html
+++ b/#src/contacts.html
@@ -1,23 +1,89 @@
 @@include('header.html')
-<div class="mob-header">
-	<div class="mob-header__container container">
-		<a href="#" class="header__logo logo">
-			<div class="logo__img">
-				<img src="img/logo.svg" alt="">
-			</div>
-			<div class="logo__text">
-				<div class="logo__title">Вологодская финифть
+
+<body>
+	<div class="wrapper">
+
+		@@include('modal-polit.html')
+		@@include('modal.html')
+		@@include('mobile-menu.html')
+
+		<div class="vsplivashki">
+			<div class="nav-header-top__dropdown submenu-main">
+				<div class="submenu-main__container">
+					<h2 class="submenu-main__title">Серьги</h2>
+					<ul class="submenu-main__list">
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Комплекты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Серьги</a>
+						</li>
+						<li class="submenu-main__item submenu-main__item--active">
+							<a href="#" class="submenu-main__link">Колье</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Кольца</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Броши</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Браслеты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Цепи</a>
+						</li>
+					</ul>
+					<ul class="submenu-main__bot">
+						<li>
+							<a href="#">иконы</a>
+						</li>
+						<li>
+							<a href="#">Другие изделия</a>
+						</li>
+					</ul>
 				</div>
-				<div class="logo__subtitle">Авторские изделия ручной работы</div>
 			</div>
-		</a>
-		<button class="mob-header__btn">МЕНЮ</button>
-	</div>
-</div>
-<div class="main main--flex">
-	<div class="container--big flex">
-		<header class="header">
-			<div class="header__container container">
+			<div class="nav-header-top__dropdown submenu-main">
+				<div class="submenu-main__container">
+					<h2 class="submenu-main__title">ювелирные украшения</h2>
+					<ul class="submenu-main__list">
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Комплекты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Серьги</a>
+						</li>
+						<li class="submenu-main__item submenu-main__item--active">
+							<a href="#" class="submenu-main__link">Колье</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Кольца</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Броши</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Браслеты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Цепи</a>
+						</li>
+					</ul>
+					<ul class="submenu-main__bot">
+						<li>
+							<a href="#">иконы</a>
+						</li>
+						<li>
+							<a href="#">Другие изделия</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="mob-header">
+			<div class="mob-header__container container">
 				<a href="#" class="header__logo logo">
 					<div class="logo__img">
 						<img src="img/logo.svg" alt="">
@@ -28,139 +94,156 @@
 						<div class="logo__subtitle">Авторские изделия ручной работы</div>
 					</div>
 				</a>
-				<nav class="header__nav nav-header">
-					<ul class="nav-header__top nav-header-top">
-						<li class="nav-header-top__item">
-							<a href="" class="nav-header-top__link">Корпоративные изделия</a>
-							<div class="nav-header-top__dropdown submenu">
-								<div class="submenu__container">
-									<h2 class="submenu__title">ювелирные украшения</h2>
-									<ul class="submenu__list">
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Комплекты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Серьги</a>
-										</li>
-										<li class="submenu__item submenu__item--active">
-											<a href="#" class="submenu__link">Колье</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Кольца</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Броши</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Браслеты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Цепи</a>
-										</li>
-									</ul>
-									<ul class="submenu__bot">
-										<li>
-											<a href="#">иконы</a>
-										</li>
-										<li>
-											<a href="#">Другие изделия</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-						<li class="nav-header-top__item nav-header-top__item--active">
-							<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
-							<div class="nav-header-top__dropdown submenu">
-								<div class="submenu__container">
-									<h2 class="submenu__title">ювелирные украшения</h2>
-									<ul class="submenu__list">
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Комплекты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Серьги</a>
-										</li>
-										<li class="submenu__item submenu__item--active">
-											<a href="#" class="submenu__link">Колье</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Кольца</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Броши</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Браслеты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Цепи</a>
-										</li>
-									</ul>
-									<ul class="submenu__bot">
-										<li>
-											<a href="#">иконы</a>
-										</li>
-										<li>
-											<a href="#">Другие изделия</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-					</ul>
-					<ul class="nav-header__bot nav-header-bot">
-						<li class="nav-header-bot__item">
-							<a href="" class="nav-header-bot__link">Доставка и оплата</a>
-						</li>
-						<li class="nav-header-bot__item">
-							<a href="" class="nav-header-bot__link">Контакты</a>
-						</li>
-					</ul>
-				</nav>
-				<div class="header__lang lang">
-					<div class="lang__item">En</div>
-					<div class="lang__item lang__item--active">Ru</div>
-				</div>
-				<div class="header__tels tels-header">
-					<div class="tels-header__item">
-						<a href="" class="tels-header__link">8 (8172) 72-20-04</a>
-					</div>
-					<div class="tels-header__item">
-						<a href="" class="tels-header__link">8 (981) 432-20-10</a>
-					</div>
-				</div>
+				<button class="mob-header__btn">МЕНЮ</button>
 			</div>
-		</header>
-
-		<section class="contacts__container container">
-			<div class="contacts__flex">
-				<div class="contacts__left">
-					@@include('breadcrumbs.html')
-					<h1 class="contacts__title title">Контакты</h1>
-					<div class="contacts__block">
-						<div class="contacts__adress">
-							<p>Вологда,</p>
-							<p>ул. Козленская, д. 43-а, корп. 2</p>
+		</div>
+		<div class="main main--flex">
+			<div class="container--big flex">
+				<header class="header">
+					<div class="header__container container">
+						<a href="#" class="header__logo logo">
+							<div class="logo__img">
+								<img src="img/logo.svg" alt="">
+							</div>
+							<div class="logo__text">
+								<div class="logo__title">Вологодская финифть
+								</div>
+								<div class="logo__subtitle">Авторские изделия ручной работы</div>
+							</div>
+						</a>
+						<nav class="header__nav nav-header">
+							<ul class="nav-header__top nav-header-top">
+								<li class="nav-header-top__item">
+									<a href="" class="nav-header-top__link">Корпоративные изделия</a>
+									<div class="nav-header-top__dropdown submenu">
+										<div class="submenu__container">
+											<h2 class="submenu__title">ювелирные украшения</h2>
+											<ul class="submenu__list">
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Комплекты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Серьги</a>
+												</li>
+												<li class="submenu__item submenu__item--active">
+													<a href="#" class="submenu__link">Колье</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Кольца</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Броши</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Браслеты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Цепи</a>
+												</li>
+											</ul>
+											<ul class="submenu__bot">
+												<li>
+													<a href="#">иконы</a>
+												</li>
+												<li>
+													<a href="#">Другие изделия</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
+								<li class="nav-header-top__item nav-header-top__item--active">
+									<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
+									<div class="nav-header-top__dropdown submenu">
+										<div class="submenu__container">
+											<h2 class="submenu__title">ювелирные украшения</h2>
+											<ul class="submenu__list">
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Комплекты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Серьги</a>
+												</li>
+												<li class="submenu__item submenu__item--active">
+													<a href="#" class="submenu__link">Колье</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Кольца</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Броши</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Браслеты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Цепи</a>
+												</li>
+											</ul>
+											<ul class="submenu__bot">
+												<li>
+													<a href="#">иконы</a>
+												</li>
+												<li>
+													<a href="#">Другие изделия</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
+							</ul>
+							<ul class="nav-header__bot nav-header-bot">
+								<li class="nav-header-bot__item">
+									<a href="" class="nav-header-bot__link">Доставка и оплата</a>
+								</li>
+								<li class="nav-header-bot__item">
+									<a href="" class="nav-header-bot__link">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+						<div class="header__lang lang">
+							<div class="lang__item">En</div>
+							<div class="lang__item lang__item--active">Ru</div>
 						</div>
-						<ul class="contacts__tels">
-							<li>
-								<a href="#">8-8172-72-20-04</a>
-							</li>
-							<li>
-								<a href="#">8-981-432-20-10</a>
-							</li>
-						</ul>
-						<a data-src="#modal-buy" data-fancybox class="contacts__mail">nhpvologda@mail.ru</a>
+						<div class="header__tels tels-header">
+							<div class="tels-header__item">
+								<a href="" class="tels-header__link">8 (8172) 72-20-04</a>
+							</div>
+							<div class="tels-header__item">
+								<a href="" class="tels-header__link">8 (981) 432-20-10</a>
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="contacts__right">
-					<div id="map" class="contacts__map"></div>
-				</div>
+				</header>
+
+				<section class="contacts__container container">
+					<div class="contacts__flex">
+						<div class="contacts__left">
+							@@include('breadcrumbs.html')
+							<h1 class="contacts__title title">Контакты</h1>
+							<div class="contacts__block">
+								<div class="contacts__adress">
+									<p>Вологда,</p>
+									<p>ул. Козленская, д. 43-а, корп. 2</p>
+								</div>
+								<ul class="contacts__tels">
+									<li>
+										<a href="tel:88172722004">8-8172-72-20-04</a>
+									</li>
+									<li>
+										<a href="tel:89814322010">8-981-432-20-10</a>
+									</li>
+								</ul>
+								<a href="mailto:nhpvologda@mail.ru" class="contacts__mail">nhpvologda@mail.ru</a>
+							</div>
+						</div>
+						<div class="contacts__right">
+							<div id="map" class="contacts__map"></div>
+						</div>
+					</div>
+				</section>
+
 			</div>
-		</section>
+		</div>
 
-	</div>
-</div>
-
-@@include('footer.html')
+		@@include('footer.html')
