--- a/#src/footer.html
+++ b/#src/footer.html
@@ -31,8 +31,9 @@
 			</div>
 			<div class="text-footer">
 				<div class="text-footer__item">Все права защищены, копирование любых материалов запрещено.</div>
-				<div class="text-footer__item">Политика конфиденциальности</div>
-				<div class="text-footer__item">Разработка сайта - <a href="#" target="_blank" class="dev">Удобный интернет</a> ©
+				<div data-src="#modal-polit" class="text-footer__item to-privacy">Политика конфиденциальности</div>
+				<div class="text-footer__item">Разработка сайта - <a href="#" target="_blank" class="dev">Удобный интернет
+						©</a>
 					2020</div>
 			</div>
 		</div>
