--- a/#src/mobile-menu.html
+++ b/#src/mobile-menu.html
@@ -24,7 +24,7 @@
             </div>
           </div>
 
-          <div class="top-nav__item">
+          <div class="top-nav__item current">
             <a href="#" class="top-nav__link">Индивидуальные изделия</a>
             <div class="top-nav__dropdown submenu">
               <div class="submenu__header">
@@ -57,7 +57,7 @@
         </div>
         <div class="mob-menu__nav-bot bot-nav">
           <div class="bot-nav__item"><a href="#" class="bot-nav__link">Доставка и оплата</a></div>
-          <div class="bot-nav__item"><a href="#" class="bot-nav__link">Контакты</a></div>
+          <div class="bot-nav__item current"><a href="#" class="bot-nav__link">Контакты</a></div>
         </div>
       </nav>
     </div>
