--- a/#src/modal.html
+++ b/#src/modal.html
@@ -18,7 +18,8 @@
 				</div>
 				<button type="submit" class="form-modal-buy__btn btn">Отправить</button>
 			</form>
-			<div class="modal-buy__privacy">Я даю согласие на обработку <a class="to-privacy">персональных данных</a></div>
+			<div class="modal-buy__privacy">Я даю согласие на обработку <a class="to-privacy"
+					data-src="#modal-polit">персональных данных</a></div>
 		</div>
 	</div>
 </div>
