--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -1,25 +1,89 @@
 @@include('header.html')
 
-<div class="mob-header">
-	<div class="mob-header__container container">
-		<a href="#" class="header__logo logo">
-			<div class="logo__img">
-				<img src="img/logo.svg" alt="">
-			</div>
-			<div class="logo__text">
-				<div class="logo__title">Вологодская финифть
-				</div>
-				<div class="logo__subtitle">Авторские изделия ручной работы</div>
-			</div>
-		</a>
-		<button class="mob-header__btn">МЕНЮ</button>
-	</div>
-</div>
+<body>
+	<div class="wrapper">
 
-<div class="main main--bg">
-	<div class="container--big">
-		<header class="header">
-			<div class="header__container container">
+		@@include('modal-polit.html')
+		@@include('modal.html')
+		@@include('mobile-menu.html')
+
+		<div class="vsplivashki">
+			<div class="nav-header-top__dropdown submenu-main">
+				<div class="submenu-main__container">
+					<h2 class="submenu-main__title">Серьги</h2>
+					<ul class="submenu-main__list">
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Комплекты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Серьги</a>
+						</li>
+						<li class="submenu-main__item submenu-main__item--active">
+							<a href="#" class="submenu-main__link">Колье</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Кольца</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Броши</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Браслеты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Цепи</a>
+						</li>
+					</ul>
+					<ul class="submenu-main__bot">
+						<li>
+							<a href="#">иконы</a>
+						</li>
+						<li>
+							<a href="#">Другие изделия</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="nav-header-top__dropdown submenu-main">
+				<div class="submenu-main__container">
+					<h2 class="submenu-main__title">ювелирные украшения</h2>
+					<ul class="submenu-main__list">
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Комплекты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Серьги</a>
+						</li>
+						<li class="submenu-main__item submenu-main__item--active">
+							<a href="#" class="submenu-main__link">Колье</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Кольца</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Броши</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Браслеты</a>
+						</li>
+						<li class="submenu-main__item">
+							<a href="#" class="submenu-main__link">Цепи</a>
+						</li>
+					</ul>
+					<ul class="submenu-main__bot">
+						<li>
+							<a href="#">иконы</a>
+						</li>
+						<li>
+							<a href="#">Другие изделия</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="mob-header">
+			<div class="mob-header__container container">
 				<a href="#" class="header__logo logo">
 					<div class="logo__img">
 						<img src="img/logo.svg" alt="">
@@ -30,211 +94,229 @@
 						<div class="logo__subtitle">Авторские изделия ручной работы</div>
 					</div>
 				</a>
-				<nav class="header__nav nav-header">
-					<ul class="nav-header__top nav-header-top">
-						<li class="nav-header-top__item">
-							<a href="" class="nav-header-top__link">Корпоративные изделия</a>
-							<div class="nav-header-top__dropdown submenu">
-								<div class="submenu__container">
-									<h2 class="submenu__title">ювелирные украшения</h2>
-									<ul class="submenu__list">
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Комплекты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Серьги</a>
-										</li>
-										<li class="submenu__item submenu__item--active">
-											<a href="#" class="submenu__link">Колье</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Кольца</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Броши</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Браслеты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Цепи</a>
-										</li>
-									</ul>
-									<ul class="submenu__bot">
-										<li>
-											<a href="#">иконы</a>
-										</li>
-										<li>
-											<a href="#">Другие изделия</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-						<li class="nav-header-top__item nav-header-top__item--active">
-							<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
-							<div class="nav-header-top__dropdown submenu">
-								<div class="submenu__container">
-									<h2 class="submenu__title">ювелирные украшения</h2>
-									<ul class="submenu__list">
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Комплекты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Серьги</a>
-										</li>
-										<li class="submenu__item submenu__item--active">
-											<a href="#" class="submenu__link">Колье</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Кольца</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Броши</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Браслеты</a>
-										</li>
-										<li class="submenu__item">
-											<a href="#" class="submenu__link">Цепи</a>
-										</li>
-									</ul>
-									<ul class="submenu__bot">
-										<li>
-											<a href="#">иконы</a>
-										</li>
-										<li>
-											<a href="#">Другие изделия</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-					</ul>
-					<ul class="nav-header__bot nav-header-bot">
-						<li class="nav-header-bot__item">
-							<a href="" class="nav-header-bot__link">Доставка и оплата</a>
-						</li>
-						<li class="nav-header-bot__item">
-							<a href="" class="nav-header-bot__link">Контакты</a>
-						</li>
-					</ul>
-				</nav>
-				<div class="header__lang lang">
-					<div class="lang__item">En</div>
-					<div class="lang__item lang__item--active">Ru</div>
-				</div>
-				<div class="header__tels tels-header">
-					<div class="tels-header__item">
-						<a href="" class="tels-header__link">8 (8172) 72-20-04</a>
-					</div>
-					<div class="tels-header__item">
-						<a href="" class="tels-header__link">8 (981) 432-20-10</a>
-					</div>
-				</div>
+				<button class="mob-header__btn">МЕНЮ</button>
 			</div>
-		</header>
+		</div>
 
-		<section class="catalog container">
-			@@include('breadcrumbs.html')
+		<div class="main main--bg main--flex">
+			<div class="container--big flex">
+				<header class="header">
+					<div class="header__container container">
+						<a href="#" class="header__logo logo">
+							<div class="logo__img">
+								<img src="img/logo.svg" alt="">
+							</div>
+							<div class="logo__text">
+								<div class="logo__title">Вологодская финифть
+								</div>
+								<div class="logo__subtitle">Авторские изделия ручной работы</div>
+							</div>
+						</a>
+						<nav class="header__nav nav-header">
+							<ul class="nav-header__top nav-header-top">
+								<li class="nav-header-top__item">
+									<a href="" class="nav-header-top__link">Корпоративные изделия</a>
+									<div class="nav-header-top__dropdown submenu">
+										<div class="submenu__container">
+											<h2 class="submenu__title">ювелирные украшения</h2>
+											<ul class="submenu__list">
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Комплекты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Серьги</a>
+												</li>
+												<li class="submenu__item submenu__item--active">
+													<a href="#" class="submenu__link">Колье</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Кольца</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Броши</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Браслеты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Цепи</a>
+												</li>
+											</ul>
+											<ul class="submenu__bot">
+												<li>
+													<a href="#">иконы</a>
+												</li>
+												<li>
+													<a href="#">Другие изделия</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
+								<li class="nav-header-top__item nav-header-top__item--active">
+									<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
+									<div class="nav-header-top__dropdown submenu">
+										<div class="submenu__container">
+											<h2 class="submenu__title">ювелирные украшения</h2>
+											<ul class="submenu__list">
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Комплекты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Серьги</a>
+												</li>
+												<li class="submenu__item submenu__item--active">
+													<a href="#" class="submenu__link">Колье</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Кольца</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Броши</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Браслеты</a>
+												</li>
+												<li class="submenu__item">
+													<a href="#" class="submenu__link">Цепи</a>
+												</li>
+											</ul>
+											<ul class="submenu__bot">
+												<li>
+													<a href="#">иконы</a>
+												</li>
+												<li>
+													<a href="#">Другие изделия</a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
+							</ul>
+							<ul class="nav-header__bot nav-header-bot">
+								<li class="nav-header-bot__item">
+									<a href="" class="nav-header-bot__link">Доставка и оплата</a>
+								</li>
+								<li class="nav-header-bot__item">
+									<a href="" class="nav-header-bot__link">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+						<div class="header__lang lang">
+							<div class="lang__item">En</div>
+							<div class="lang__item lang__item--active">Ru</div>
+						</div>
+						<div class="header__tels tels-header">
+							<div class="tels-header__item">
+								<a href="" class="tels-header__link">8 (8172) 72-20-04</a>
+							</div>
+							<div class="tels-header__item">
+								<a href="" class="tels-header__link">8 (981) 432-20-10</a>
+							</div>
+						</div>
+					</div>
+				</header>
 
-			<h1 class="catalog__title title">Серьги</h1>
-			<div class="catalog__slider">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<a href="#" class="product-slide">
-							<div class="product-slide__descr">
-								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
-								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<div class="product-slide__price">
-									<span class="product-slide__old">7500 ₽</span>
-									<span class="product-slide__new">6500 ₽</span>
-								</div>
-							</div>
-							<div class="product-slide__image">
-								<img src="img/product-slide-1jpg.jpg" alt="">
-								<span>подробнее</span>
-							</div>
-							<div class="product-slide__decor">
-								<div class="to-cart">
-									<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
-									<span class="to-cart__text">Заказать</span>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="#" class="product-slide">
-							<div class="product-slide__descr">
-								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
-								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<div class="product-slide__price">
-									<span class="product-slide__old">7500 ₽</span>
-									<span class="product-slide__new">6500 ₽</span>
-								</div>
-							</div>
-							<div class="product-slide__image">
-								<img src="img/product-slide-1jpg.jpg" alt="">
-								<span>подробнее</span>
-							</div>
-							<div class="product-slide__decor">
-								<div class="to-cart">
-									<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
-									<span class="to-cart__text">Заказать</span>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="#" class="product-slide">
-							<div class="product-slide__descr">
-								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
-								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<div class="product-slide__price">
-									<span class="product-slide__old">7500 ₽</span>
-									<span class="product-slide__new">6500 ₽</span>
-								</div>
-							</div>
-							<div class="product-slide__image">
-								<img src="img/product-slide-1jpg.jpg" alt="">
-								<span>подробнее</span>
-							</div>
-							<div class="product-slide__decor">
-								<div class="to-cart">
-									<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
-									<span class="to-cart__text">Заказать</span>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="#" class="product-slide">
-							<div class="product-slide__descr">
-								<h3 class="product-slide__title">Серьги «Ромашка»</h3>
-								<p class="product-slide__subtitle">серебро 925, финифть</p>
-								<div class="product-slide__price">
-									<span class="product-slide__old">7500 ₽</span>
-									<span class="product-slide__new">6500 ₽</span>
-								</div>
-							</div>
-							<div class="product-slide__image">
-								<img src="img/product-slide-1jpg.jpg" alt="">
-								<span>подробнее</span>
-							</div>
-							<div class="product-slide__decor">
-								<div class="to-cart">
-									<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
-									<span class="to-cart__text">Заказать</span>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
+				<section class="catalog container">
+					@@include('breadcrumbs.html')
 
+					<h1 class="catalog__title title">Серьги</h1>
+					<div class="catalog__slider">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+
+					</div>
+					<a href="#" class="catalog__btn btn">Показать еще</a>
+				</section>
 			</div>
-			<a href="#" class="catalog__btn btn">Показать еще</a>
-		</section>
-	</div>
-</div>
+		</div>
 
-@@include('footer.html')
+		@@include('footer.html')
