--- a/#src/product.html
+++ b/#src/product.html
@@ -221,7 +221,7 @@
 				<section class="product__container container">
 					<div class="product__flex">
 						<div class="product__left">
-							<div class="product-gal">
+							<div class="product-gal" data-aos="new-animation" data-aos-duration="1000" data-aos-easing="ease-in-out">
 								<div class="swiper-wrapper product__wrapper">
 									<div class="swiper-slide">
 										<a href="img/product-1.jpg" class="product-gal__item" data-fancybox="product"
