--- a/#src/footer.html
+++ b/#src/footer.html
@@ -32,7 +32,8 @@
 			<div class="text-footer">
 				<div class="text-footer__item">Все права защищены, копирование любых материалов запрещено.</div>
 				<div data-src="#modal-polit" class="text-footer__item to-privacy">Политика конфиденциальности</div>
-				<div class="text-footer__item">Разработка сайта - <a href="#" target="_blank" class="dev">Удобный интернет
+				<div class="text-footer__item">Разработка сайта - <a href="https://udnet.ru/" target="_blank"
+						class="dev">Удобный интернет
 						©</a>
 					2020</div>
 			</div>
@@ -45,6 +46,7 @@
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/ofi.min.js"></script>
+<script src="js/aos.js"></script>
 <script src="js/jquery.inputmask.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
