--- a/#src/modal.html
+++ b/#src/modal.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class="form-modal-buy__item">
 					<p>Номер телефона</p>
-					<input type="text">
+					<input type="tel">
 				</div>
 				<div class="form-modal-buy__item">
 					<p>Комментарии к заказу</p>
